# lexanchor

./: FACTS.md  changelog.md
back/lexAnchor_backup_20260501_070220/: FACTS.md  changelog.md
back/lexAnchor_backup_20260501_070220/docs/: anchor-server-design.md  v0.1.1-to-v0.2-plan.md
back/lexAnchor_backup_20260501_070220/server/: README.md
back/lexAnchor_backup_20260501_070809/: FACTS.md  changelog.md
back/lexAnchor_backup_20260501_070809/demo/: main_lex_anchor.py
back/lexAnchor_backup_20260501_070809/docs/: anchor-server-design.md
back/lexAnchor_backup_20260501_070809/server/: README.md  pyproject.toml
back/lexAnchor_backup_20260501_070809/server/app/: __init__.py  models.py
back/lexAnchor_backup_20260501_070809/server/app/api/: __init__.py  routes_api_docs.py  routes_jobs.py
back/lexAnchor_backup_20260501_070809/server/app/services/: anchor_engine.py  service_factory.py
back/lexAnchor_backup_20260501_070809/server/rules/: rules_v0.2.yaml
back/lexAnchor_backup_20260501_071419/: FACTS.md  changelog.md
back/lexAnchor_backup_20260501_071419/demo/: README.md
back/lexAnchor_backup_20260501_071419/docs/: anchor-server-design.md  (+2 more)
back/lexAnchor_backup_20260501_072021/: FACTS.md  changelog.md
back/lexAnchor_backup_20260501_094149/: FACTS.md  changelog.md
demo/: register_rule_tool.py
demo/reports/: report_1776239012.json  report_1776242148.json
demo/src/: rule_engine.py
docs/: anchor-server-design.md  api-reference.md  frontend-quickstart-for-legal.md
server/: README.md
server/app/: main.py  models.py
server/tests/: test_anchor_engine.py
(+93 files in other folders)
