[project]
name = "lexanchor-server"
version = "0.1.0"
description = "LexAnchor server-side API for legal anchor review tools"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
documents = [
  "python-docx>=1.1",
  "docling>=2.0",
]

grounding = [
  "langextract>=1.0",
]

integrations = [
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "docling>=2.0",
  "langextract>=1.0",
]

dev = [
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
